# lib/Model/ProductsRead.php
@@ -68,7 +68,8 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         'image_verso' => 'string',
         'category' => '\ProductApi\Model\CategoriesRead',
         'is_available' => 'bool',
-        'description' => 'string'
+        'description' => 'string',
+        'characteristics' => '\ProductApi\Model\CharacteristicRead[]'
     ];
 
     /**
@@ -89,7 +90,8 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         'image_verso' => null,
         'category' => null,
         'is_available' => null,
-        'description' => null
+        'description' => null,
+        'characteristics' => null
     ];
 
     /**
@@ -129,7 +131,8 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         'image_verso' => 'imageVerso',
         'category' => 'category',
         'is_available' => 'isAvailable',
-        'description' => 'description'
+        'description' => 'description',
+        'characteristics' => 'characteristics'
     ];
 
     /**
@@ -148,7 +151,8 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         'image_verso' => 'setImageVerso',
         'category' => 'setCategory',
         'is_available' => 'setIsAvailable',
-        'description' => 'setDescription'
+        'description' => 'setDescription',
+        'characteristics' => 'setCharacteristics'
     ];
 
     /**
@@ -167,7 +171,8 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         'image_verso' => 'getImageVerso',
         'category' => 'getCategory',
         'is_available' => 'getIsAvailable',
-        'description' => 'getDescription'
+        'description' => 'getDescription',
+        'characteristics' => 'getCharacteristics'
     ];
 
     /**
@@ -241,6 +246,7 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
         $this->container['category'] = $data['category'] ?? null;
         $this->container['is_available'] = $data['is_available'] ?? null;
         $this->container['description'] = $data['description'] ?? null;
+        $this->container['characteristics'] = $data['characteristics'] ?? null;
     }
 
     /**
@@ -542,6 +548,30 @@ class ProductsRead implements ModelInterface, ArrayAccess, \JsonSerializable
     public function setDescription($description)
     {
         $this->container['description'] = $description;
+
+        return $this;
+    }
+
+    /**
+     * Gets characteristics
+     *
+     * @return \ProductApi\Model\CharacteristicRead[]|null
+     */
+    public function getCharacteristics()
+    {
+        return $this->container['characteristics'];
+    }
+
+    /**
+     * Sets characteristics
+     *
+     * @param \ProductApi\Model\CharacteristicRead[]|null $characteristics characteristics
+     *
+     * @return self
+     */
+    public function setCharacteristics($characteristics)
+    {
+        $this->container['characteristics'] = $characteristics;
 
         return $this;
     }
